# computer_animation

./: .gitignore  imgui.ini
PA1/nemo-pa1-release/scenes/pa1/: cloth_gen.py  scene05.yml
PA1/submission/nemo_pa1/: README.md
PA1/submission/nemo_pa1/assignments/: pack_submission.py
PA2/nemo-pa2-release/: .gitignore  README.md  imgui.ini  pyproject.toml
PA2/nemo-pa2-release/assignments/: pa1.py  pa2.py  pack_submission.py  plot.py  run.py
PA2/nemo-pa2-release/scenes/pa1/: cloth_gen.py  scene01.yml  scene02.yml  scene04.yml
PA2/nemo-pa2-release/scenes/pa2/: scene00.yml  scene01.yml  scene02.yml  scene03.yml  scene04.yml  scene05.yml  scene06.yml  scene07_rope_bridge.yml  (+1 more)
PA2/nemo-pa2-release/venv311/: pyvenv.cfg
assignments/: pa1.py  pa1_cp.py  run.py
nemo-prerelease_for_students/: README.md  pyproject.toml
nemo-prerelease_for_students/assignments/: pa1.py  run.py
nemo-prerelease_for_students/scenes/pa1/: scene00.yml  scene02.yml  scene04.yml
nemo-prerelease_for_students/src/nemo/core/: header.py
nemo-prerelease_for_students/src/nemo/geometry/: types.py
nemo-prerelease_for_students/src/nemo/sim/: __init__.py  forces.py  state.py
nemo-prerelease_for_students/src/nemo/solvers/: __init__.py  explicit_euler.py
nemo-prerelease_for_students/src/tests/: test_builder.py
nemo-prerelease_for_students/tests/: simple_vis.py
scenes/pa1/: scene01.yml  scene01_wind.yml  scene06.yml
src/nemo/core/: types.py
src/nemo/geometry/: __init__.py
src/nemo/sim/: __init__.py  forces.py
src/nemo/solvers/: explicit_euler.py  midpoint.py  symplectic_euler.py
(+21 files in other folders)
